@@ -3,6 +3,7 @@ Revision history for Perl module CPAN::Mini::Webserver:
 0.44
      - autogenerate the CSS and Images template files
      - use Text::Unidecode so that searching for Leon Brocard works
+     - fix bug to do with "buffy -test" not showing modules
 
 0.43 Thu Sep 18 17:14:50 BST 2008
      - add an abstract to the Makefile.PL
